Updated layout to fix a few bugs.

--- a/_layout/index.hbs
+++ b/_layout/index.hbs
@@ -12,6 +12,7 @@
 </head>
 <body id="body">
 	<div id="main" class="main">
+		<div class="main-content-area">
 		<div class="content-wrap">
 			<div class="site-title-wrap">
 				<span class="site-title">Biz Quest Library</span>
@@ -26,7 +27,7 @@
 					<div class="signup-form cube-plane">
 						<div class="cta">Do you want to get free updates? Join here!</div>
 						<form action="/subscribe" name="signup" method="POST" onsubmit="submitSubscriber(event)">
-							<input type="hidden" name="domain" value="" />
+							<input type="hidden" name="list" value="update@bizquestdiary.com" />
 							<input id="firstName" type="text" name="firstName" placeholder="first name" required />
 							<input id="email" type="email" name="email" placeholder="your-best@email.com" required />
 							<button id="join" type="submit">Join</button>
@@ -34,6 +35,7 @@
 					</div>
 				</div>
 			</div>
+		</div>
 		</div>
 	</div>
 	<script src="/code.js"></script>
