--- a/_layout/page.hbs
+++ b/_layout/page.hbs
@@ -52,7 +52,7 @@
 					<div class="signup-form cube-plane">
 						<div class="cta">Do you want to get free updates? Join here!</div>
 						<form action="/subscribe" name="signup" method="POST" onsubmit="submitSubscriber(event)">
-							<input type="hidden" name="domain" value="all@bizquestdiary.com" />
+							<input type="hidden" name="list" value="update@bizquestdiary.com" />
 							<input id="firstName" type="text" name="firstName" placeholder="first name" required />
 							<input id="email" type="email" name="email" placeholder="your-best@email.com" required />
 							<button id="join" type="submit">Join</button>
